--- a/index.Rmd
+++ b/index.Rmd
@@ -2,8 +2,9 @@
 title: "My Document"
 author: "Deden Istiawan - Institut Teknologi Statistika dan Bisnis Muhammadiyah"
 date: "`r Sys.Date()`"
-output: 
-  html_document:
+output:
+  html_document :
+    css : style.css
     theme: flatly
     highlight: zenburn
     toc: true
