--- a/index.Rmd
+++ b/index.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "My Document"
-author: "Deden Istiawan - Institut Teknologi Statistika dan Bisnis Muhammadiyah"
+author: "Nanda Zhafran Mahendra-Institut Teknologi Statistika dan Bisnis Muhammadiyah"
 date: "`r Sys.Date()`"
-output:
-  html_document :
-    css : style.css
+output: 
+  html_document:
+    css: style.css
     theme: flatly
-    highlight: zenburn
+    higlight: zenburn
     toc: true
     toc_float:
       collapsed: true
@@ -16,70 +16,9 @@ bibliography: references.bib
 
 ```{=html}
 <style>
-/* Memberikan latar belakang yang lembut */
-body {
-    background-color: #f8f9fa; /* Warna abu muda */
-    text-align: justify;
-    font-family: 'Arial', sans-serif; /* Font modern */
-    line-height: 1.6;
-    padding: 20px;
-}
-
-/* Styling judul utama */
-h1, h2, h3 {
-    color: #2c3e50; /* Warna biru tua */
-    font-family: 'Georgia', serif;
-}
-
-/* Tabel */
-table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-th {
-    background-color: #4CAF50; /* Warna hijau */
-    color: white;
-    text-align: center;
-}
-
-/* Code block */
-pre, code {
-    background-color: #f5f5f5; /* Warna abu-abu terang */
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 5px;
-    overflow-x: auto;
-    font-family: 'Courier New', monospace;
-}
-
-/* Tombol TOC mengapung */
-#toc {
-    background-color: #ffffff; /* Warna putih */
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
-}
-
-a {
-    color: #3498db; /* Warna biru */
-    text-decoration: none;
-}
-
-a:hover {
-    color: #1abc9c; /* Warna hijau */
-    text-decoration: underline;
-}
+body{
+text-align: justify}
 </style>
-
-
 ```
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -91,11 +30,64 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
+```{r}
+print ("Hello Wordl")
+```
+```{r}
+library(readr)
+iris_iris <- read_csv("iris - iris.csv")
+View(iris_iris)
+```
+
+
+
 ```{r cars}
 summary(cars)
 ```
 
 ## Including Plots
+
+```{r}
+library(ggplot2) 
+# buat data frame contoh
+data <- data.frame(x = rnorm(100), y = rnorm(100))
+# buat plot titik
+ggplot(data, aes(x = x, y = y)) + 
+  geom_point() +
+  labs(title = "Plot titik" , x = "Sumbu x", y = "sumbu y ") + theme_classic()
+```
+
+
+
+```{r}
+# buat data frame contoh dengan variable kategorik
+
+data <- data.frame(x = rnorm(100), y = rnorm(100), grup = sample(c("A","B","C","D"), 100,replace = TRUE))
+
+# buat plot titik dengan faceting
+ggplot(data, aes(x = x, y = y, color = grup)) + 
+  geom_point(size = 2) +
+  facet_wrap(~ grup) +
+  scale_color_manual(values = c("A" = "red", "B" = "blue", "C" = "pink", "D" = "green")) + 
+  theme_minimal() +
+  labs(color = "Grup")
+```
+
+
+
+```{r}
+setwd("C:/Users/ACER/OneDrive/Documents/Dataviz-ggplot")
+data <- read.csv("lizards.csv")
+print(data)
+
+```
+
+```{r}
+library(ggplot2)
+ggplot(lizards, aes(x=total_length,y=weight))+geom_point()
+labs(title = "plot titik", x="sumbu x", y="sumbu y")+theme_classic()
+```
+
 
 You can also embed plots, for example:
 
@@ -106,4 +98,3 @@ plot(pressure)
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
 # Referensi
-
